--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <textarea class="form-control" id="pesan" rows="3"></textarea>
             </div>
             
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-secondary">Submit</button>
            </form>
         </div>
       </div>
