--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2>My Galery</h2>
           </div>
           <div class="row justify-content-center">
-            <div class="col-md-3 m-1">
+            <div class="col-md-4">
               <div class="card">
                 <img src="img/Galery/me.jpg" class="card-img-top" alt="me" />
                 <div class="card-body">
@@ -117,7 +117,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 m-1">
+            <div class="col-md-4">
               <div class="card">
                 <img src="img/Galery/me & gf.jpg" class="card-img-top" alt="me & gf" />
                 <div class="card-body">
@@ -125,7 +125,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 m-1">
+            <div class="col-md-4">
               <div class="card">
                 <img src="img/Galery/me3.jpg" class="card-img-top" alt="me3" />
                 <div class="card-body">
